--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
         "cbn-form": "CBN-IT/cbn-form#~1.1.0"
     },
     "devDependencies": {
+        "iron-input": "PolymerElements/iron-input#~1.0.10",
+        "paper-input": "PolymerElements/paper-input#~1.1.17",
         "web-component-tester": "Polymer/web-component-tester",
         "iron-component-page": "PolymerElements/iron-component-page#^1.0",
         "test-fixture": "PolymerElements/test-fixture#^1.0"
